# viprodyne

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  conf.py  data.md  driven_contacts.md  examples.md  fitting.md  getting_started.md  index.md  kernels.md  missing_data.md  rate_sharing.md
docs/api/: index.rst
docs/developer/: architecture.md  ms2posterior_parity.md
examples/: contact_threshold_profile.ipynb  contact_threshold_profile.py
scripts/: compare_ms2posterior_viprodyne.py
src/viprodyne/: __init__.py  fit.py  model.py  profile.py
src/viprodyne/core/: __init__.py  bernoulli_transfer_pol2.py  contact_survival.py  mf_pol2_finder.py  ms2_kernels.py  pol2_sampler.py  rate_edges.py  simulation.py  tilted_ctmc.py
src/viprodyne/variational/: __init__.py  base.py  distributions.py  nodes.py
tests/: test_bernoulli_transfer_pol2.py  test_contact_survival.py  test_distributions.py  test_fit.py  test_graph.py  test_mf_pol2_finder.py  test_model.py  test_ms2_kernels.py  test_pol2_sampler.py  test_profile.py  test_public_workflows.py  test_rate_edges.py  test_simulation.py  test_tilted_ctmc.py  test_variational_nodes.py
