[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "viprodyne"
version = "0.1.0"
description = "Variational inference tools for MS2 posterior models."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Henrik Dahl Pinholt" },
]
dependencies = [
  "jax>=0.4",
  "numpy>=1.24",
  "scipy>=1.10",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "ruff>=0.8",
]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.setuptools.packages.find]
where = ["src"]
